--- a/Classes/Essence Mage.wikitext
+++ b/Classes/Essence Mage.wikitext
@@ -66,7 +66,7 @@ To cast fireball you push the trigger on your right hand and it will appear in y
 |-
 ! align="left" |<h2>Tank</h2>
 |-
-||
+|| We need info for this class
 |}
 
 {| class="mw= collapsible mw-collapsed" width="100%"
