--- a/Quests/Cast out the Outcasts.wikitext
+++ b/Quests/Cast out the Outcasts.wikitext
@@ -5,25 +5,29 @@
 | levelreq = ???
 |start= [[Mika Yakiri]]
 |end=[[Mika Yakiri]]
-|experience = 8400 exp
+|experience = 8400 EXP
 |money={{cost|190}}
 |previous=
 |next=
 }}
 ==Location==
-The second tower  near an Amarite Outpost in [[galian valley]].
+[Mika Yakiri] at the second tower near an Amarite Outpost in [[galian valley]].
 ==Description==
 The Exiled Trail leads up to the vilage.
 <br/>
 The only way they could take this position is if the Amarites allowed it. Find out why. And player: show them only the mercy they offered their victims.
 ==Rewards==
 Upon completion of this quest you will gain:
-*8400exp
+*8400 EXP
 *{{cost|190}}
-==objectives==
-*First Exiled leader defeated
-*Discover the farmer's fate
+==Progress==
+:First Exiled leader defeated
+:Discover the farmer's fate
+==Completion==
+Return to Mika Yakiri after you completed your mission for the reward.
+
 ==Notes==
 
-
 [[Category:Quests]]
+
+__NOTOC__
