--- a/Quests/Collect-Exiled Trophies.wikitext
+++ b/Quests/Collect-Exiled Trophies.wikitext
@@ -1,26 +1,28 @@
 {{Questbox
-|name= Collect-Exiled trophies
-|category=Quests
+|name= Collect - Exiled Trophies
+|category= Quests
 | level = 
 | levelreq = ???
-|start= 
-|end=
-|experience = 2500 exp
+|start= [[Mika Yakiri]]
+|end= [[Mika Yakiri]]
+|experience = 2500 EXP
 |money={{cost|100}}
 |previous=
 |next=
 }}
 ==Location==
-The second tower near an Amarite Outpost in [[galian valley]].
+Meet [Mika Yakiri] at the second tower near an Amarite Outpost in [[galian valley]].
 ==Description==
 Exiled have been running amok in the area, help us quell their forces and i an reward you for any masks you gather. 
 ==Rewards==
 Upon completion of this quest you will gain:
-*exp
-*{{cost|}}
-==objectives==
-<!--if there are muliple parts lable them accordingly-->
+:2500 EXP
+:{{cost|100}}
+==Progress==
+
+==Completion==
+Return to Mika Yakiri at second tower near an Amarite Outpost after you completed your mission for the reward.
 ==Notes==
 
-
 [[Category:Quests]]
+__NOTOC__
