changed to keep consistency: npcbrimm

--- a/Quests/Livin' la vida Lake-ah.wikitext
+++ b/Quests/Livin' la vida Lake-ah.wikitext
@@ -5,7 +5,7 @@
 | levelreq = ???
 |start= [[Brimm]]
 |end= [[Mika Yakiri]]
-|experience = 1500 exp
+|experience = 1500 EXP
 |money={{cost|80}}
 |previous=
 |next=
@@ -16,13 +16,15 @@ Meet [[Brimm]] standing on the left side past the tori gate where Mika Yakiri st
 Well now that you can whip up a [[Brimm]] approved [[Orange Creamsicle Smoothie]], could you please make a couple and bring them to a friend of mine? Her name is Mika, and you can find her by the lake, just over the Dragontooth Mountians there.
 ==Rewards==
 Upon completion of this quest you will gain:
-*1500 exp
+*1500 EXP
 *{{cost|80}}
-==objectives==
-*2 Orange Smoothies for Mika By the lake 
-*Take the Smoothies to Mika by the lake
+==Progress==
+:2 Orange Smoothies for Mika by the lake 
+:Take the Smoothies to Mika by the lake
+==Completion==
+Go to Mika Yakiri by the lake to complete your mission for the reward.
 ==Notes==
 
-
 [[Category:Quests]]
+
 __NOTOC__
