Update Orange you glad I'm here.wikitext

--- a/Quests/Orange you glad I'm here.wikitext
+++ b/Quests/Orange you glad I'm here.wikitext
@@ -15,7 +15,7 @@ Meet [[Brimm]] standing on the left side past the tori gate where Mika Yakiri st
 ==Description==
 Hi there, player! It's time for you to learn how to cook.<br/>
 Gather some Fresh oranges from out in the plains, buy milk from the nearby store, and then bring all those yummy ingredients to me to prove you're serious about learning to cook<br/> 
-By the way the best way to find oranges is to look up! There is a tree just past the bridge leading to the plains. Orang-u-tang right up that tree and grap that fresh fruit!
+By the way the best way to find oranges is to look up! There is a tree just past the bridge leading to the plains. Orang-u-tang right up that tree and grab that fresh fruit!
 ==Rewards==
 Upon completion of this quest you will gain:
 *1350 EXP
