--- a/Quests/Cast out the Outcasts.wikitext
+++ b/Quests/Cast out the Outcasts.wikitext
@@ -23,6 +23,7 @@ Upon completion of this quest you will gain:
 ==Progress==
 :First Exiled leader defeated
 :Discover the farmer's fate
+:Search the second camp
 ==Completion==
 Return to Mika Yakiri after you completed your mission for the reward.
 
